# kalpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  rtd_environment.yml  setup.py
.github/workflows/: main.yml  publish.yml
docs/source/: changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst
docs/source/first_steps/: index.rst
docs/source/reference/: index.rst
docs/source/user_guide/: index.rst
extensions/: _kalpy.cpp
extensions/chain/: chain.cpp  pybind_chain.h
extensions/cudamatrix/: cudamatrix.cpp  pybind_cudamatrix.h
extensions/decoder/: decoder.cpp  pybind_decoder.h
extensions/feat/: feat.cpp  pybind_feat.h
extensions/fstext/: fstext.cpp  pybind_fstext.h
extensions/gmm/: gmm.cpp  pybind_gmm.h
extensions/hmm/: hmm.cpp  pybind_hmm.h
extensions/itf/: itf.cpp  pybind_itf.h
extensions/ivector/: ivector.cpp  pybind_ivector.h
extensions/kws/: kws.cpp  pybind_kws.h
extensions/lat/: lat.cpp  pybind_lat.h
extensions/lm/: lm.cpp  pybind_lm.h
extensions/matrix/: matrix.cpp  pybind_matrix.h
extensions/nnet/: nnet.cpp  pybind_nnet.h
extensions/nnet2/: nnet2.cpp  pybind_nnet2.h
extensions/nnet3/: nnet3.cpp  pybind_nnet3.h
extensions/online/: online.cpp  pybind_online.h
extensions/online2/: online2.cpp  pybind_online2.h
extensions/pybind/: kaldi_pybind.h
extensions/rnnlm/: pybind_rnnlm.h  rnnlm.cpp
extensions/transform/: pybind_transform.h  transform.cpp
extensions/tree/: pybind_tree.h  tree.cpp
extensions/util/: pybind_util.h  util.cpp
kalpy/: data.py  exceptions.py  utils.py  utterance.py
kalpy/decoder/: data.py  decode_graph.py  training_graphs.py
kalpy/feat/: cmvn.py  data.py  fmllr.py  lda.py  mfcc.py  pitch.py  vad.py
kalpy/fstext/: lexicon.py  utils.py
kalpy/gmm/: align.py  data.py  decode.py  train.py  utils.py
kalpy/ivector/: data.py  extractor.py  plda.py  train.py
kalpy/lm/: rescore.py
tests/: conftest.py  test_align.py  test_decode.py  test_decoder.py  test_fstext.py  test_hmm.py  test_imports.py  test_matrix.py  test_mfcc.py  test_pitch.py  test_tree.py
tests/data/acoustic_models/mono/: final.mdl  tree
tests/data/acoustic_models/sat/: lda.mat  meta.json  tree
tests/data/dictionaries/: test_sat.txt
tests/data/kaldi/: ali_first_pass.ark  ali_second_pass.ark  cmvn.ark  cmvn.scp  feats.1.ark  feats.1.scp  final_features.1.ark  final_features.1.scp  final_features.ark  final_features.scp  fsts.1.2.ark  mfccs.ark  mfccs.scp  spk2utt.scp  trans.ark  trans.scp  trans_composed.ark  trans_composed.scp  trans_second.ark  trans_second.scp  utt2spk.scp  wav.scp
tests/data/language_models/: test_lm.arpa
